# fucktheddl

./: .gitignore  CNAME  README.md  build.gradle.kts  local.properties.example  package.json  pyproject.toml  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/zpc/fucktheddl/: SmokeTestReceiver.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zpc/fucktheddl/: MainActivity.kt
app/src/main/java/com/zpc/fucktheddl/about/: AboutRepositoryInfo.kt
app/src/main/res/drawable/: ic_github_mark.xml  ic_launcher_background.xml  ic_notification_daily.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: update_file_paths.xml
backend/fucktheddl_agent/: __init__.py  api.py  auth.py  auth_store.py  config.py  email_sender.py  jobs.py  model_gateway.py  schemas.py  service.py  storage.py  workflow.py
backend/tests/: test_agent_api.py  test_auth_service.py  test_auth_store.py  test_email_sender.py
docs/: backend-agent.md  frontend-design.md  product-plan.md  production-readiness.md
docs/releases/: v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md
docs/superpowers/plans/: 2026-04-29-android-native-skeleton.md  2026-05-01-email-auth-local-room.md
docs/superpowers/specs/: 2026-04-29-android-native-skeleton-design.md  2026-05-01-email-auth-local-room-design.md
prototype/: index.html  theme-preview.html
schedules/: 2026-04.json  2026-05.json
tests/: frontend-prototype.test.mjs
todos/: 2026-04.json  2026-05.json
(+55 files in other folders)
