[project]
name = "fucktheddl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "langgraph>=0.2",
    "pydantic>=2",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
